# mse-gl-hw-2

./: CMakeLists.txt  README.md  build.bat
src/App/: CMakeLists.txt  Window.cpp  Window.h
src/App/Shaders/: diffuse.fs  diffuse.vs
